--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
       <section class="main">
           <div class="container py-5">
               <div class="row py-5">
-                  <div class="col-lg-7 pt-5 text-center">
+                  <div class="col-lg-12 pt-5 text-center">
                     <h1 class="pt-5">Nature Has Always Cared For us !</h1>
+                    <h2 class="text-white">We sell all kind of Tiger nuts drinks</h2>
                     <button class="btn1 mt-3">SHOP NOW!</button>
                 </div>
               </div>
@@ -223,7 +224,7 @@
                   </div>
                   <div class="row">
                     <div class="col-lg-12 py-3">
-                      <textarea name="form-control bg-light" placeholder="Enter Your Complians" id="" cols="60" rows="5"></textarea>
+                      <textarea name="" class="form-control bg-light" placeholder="Enter Your Complians" id="" cols="60" rows="5"></textarea>
                     </div>
                   </div>
                   <button class="btn1">submit</button>
